Fix the about section mobile background image position

--- a/styles/main.css
+++ b/styles/main.css
@@ -344,7 +344,7 @@ ul {
   background-image: url(../images/mobile/illustration-about-me-mobile.svg);
   background-repeat: no-repeat;
   background-size: contain;
-  background-position: 0% -2%;
+  background-position: 100% -2%;
 }
 
 .section-about__skills {
